# haskemu

./: .gitignore  LICENSE  README.md  floskell.json  haskemu.cabal  haskgb.cabal
haskemu/CHIP8/: DisplayState.hs  Main.hs
haskemu/CHIP8-debugger/: Main.hs
src/: Main.hs
src/CHIP8/: DisplayState.hs  Main.hs  Opcode.hs  ProgramState.hs  Resolver.hs  Util.hs
test/CHIP8/: OpcodeSpec.hs  UtilSpec.hs
