name:                   haskemu
version:                0.1.0.0
cabal-version:          >= 1.12
build-type:             Simple
license:                MIT
license-file:           LICENSE
author:                 Chad Reynolds
copyright:              (c) 2018 Chad Reynolds
maintainer:             cjreynol13@aol.com
stability:              alpha
homepage:               https://github.com/Cjreynol/haskemu
bug-reports:            https://github.com/Cjreynol/haskemu/issues
synopsis:               Project to learn about video game emulation through 
                        implementation
-- description:

category:               Game
tested-with:            GHC == 8.4.3
extra-source-files:     README.md


source-repository head
    type:               git
    location:           git://github.com/Cjreynol/haskemu.git

executable chip8
    main-is:            CHIP8/Main.hs
    build-depends:        base      >= 4.11 && < 4.12
                        , primitive >= 0.6  && < 0.7
                        , random    >= 1.1  && < 1.2
                        , vector    >= 0.12 && < 0.13
                        , sdl2      >= 2.4  && < 2.5
    other-modules:        CHIP8.DisplayState
                        , CHIP8.Opcode
                        , CHIP8.ProgramState
                        , CHIP8.Util
    hs-source-dirs:     src
    other-extensions:     OverloadedStrings
                        , RecordWildCards
    default-language:   Haskell2010
    ghc-options:        -main-is CHIP8.Main
                        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

