cabal-version:          3.0
name:                   haskemu
version:                0.1.0.0
build-type:             Simple
license:                MIT
license-file:           LICENSE
author:                 Chad Reynolds
copyright:              (c) 2018-2023 Chad Reynolds
maintainer:             cjreynol13@aol.com
stability:              alpha
homepage:               https://github.com/Cjreynol/haskemu
bug-reports:            https://github.com/Cjreynol/haskemu/issues
synopsis:               Project to learn about video game emulation through 
                        implementation
-- description:

category:               Game
tested-with:            GHC == 9.2.7
extra-source-files:     README.md


source-repository head
    type:               git
    location:           git://github.com/Cjreynol/haskemu.git

executable chip8
    main-is:            Main.hs
    build-depends:        base      ^>= 4.16.4
                        , vector    ^>= 0.13.0
                        , sdl2      ^>= 2.5.5
                        , chip8-lib
    --other-modules:
    hs-source-dirs:     haskemu/CHIP8
    --default-extensions:
    other-extensions:     OverloadedStrings
                        , RecordWildCards
    default-language:   GHC2021
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

library chip8-lib
    build-depends:        base      ^>= 4.16.4
                        , random    ^>= 1.2.1
                        , vector    ^>= 0.13.0
                        , sdl2      ^>= 2.5.5
    exposed-modules:      DisplayState
                        , Opcode
                        , ProgramState
                        , Util
    --other-modules:
    hs-source-dirs:     src/CHIP8
    --default-extensions:
    other-extensions:     RecordWildCards
    default-language:   GHC2021
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

test-suite chip8-spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-depends:        base          ^>= 4.16.4
                        , hspec         >=  2.11.0
                        , chip8-lib
    other-modules:        OpcodeSpec
                        , UtilSpec
    hs-source-dirs:     test/CHIP8
    --default-extensions:
    --other-extensions:
    default-language:   GHC2021
    ghc-options:        -Wall
    build-tool-depends: hspec-discover:hspec-discover == 2.*
